force-app/main/default/objects/APIGetToken__mdt/APIGetToken__mdt.object-meta.xml
<CustomObject>
    <label>APIGetToken</label>
    <pluralLabel>APIGetTokens</pluralLabel>
</CustomObject>