force-app/main/default/objects/APIGetToken__mdt/fields/consumerKey__c.field-meta.xml
<CustomField>
    <fullName>consumerKey__c</fullName>
    <label>consumerKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>