force-app/main/default/objects/APIGetToken__mdt/fields/consumerSecret__c.field-meta.xml
<CustomField>
    <fullName>consumerSecret__c</fullName>
    <label>consumerSecret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>