force-app/main/default/objects/APIGetToken__mdt/fields/CustomerSecret__c.field-meta.xml
<CustomField>
    <fullName>CustomerSecret__c</fullName>
    <label>Customer Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>